samples/k8s/app-deployment-h2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: book-collection-app
    version: h2-1.0-SNAPSHOT
  name: book-collection-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: book-collection-app
      version: h2-1.0-SNAPSHOT
  template:
    metadata:
      labels:
        app: book-collection-app
        version: h2-1.0-SNAPSHOT
    spec:
      containers:
        - args:
          image: mbaran/book-collection-app:h2-1.0-SNAPSHOT
          imagePullPolicy: Always
          name: book-collection-app
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1024Mi"
              cpu: "500m"
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: book-collection-app
    service: book-collection-app
  name: book-collection-app
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: book-collection-app
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: book-collection-app-gateway
spec:
  rules:
    - http:
        paths:
          - path: /h2
            pathType: Prefix
            backend:
              service:
                name: book-collection-app
                port:
                  number: 80
